# RonaAI

./: .dockerignore  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
app/: main.py
app/api/: routes.py
app/core/: config.py
app/services/: agent.py  load_model.py
app/services/saved_models/skin_detection_ensemble/: fingerprint.pb  saved_model.pb
app/services/saved_models/skin_detection_ensemble/variables/: variables.index
src/components/: Camera.jsx  Footer.jsx  ProfileModal.jsx
src/utils/: api.js
